--- a/styles/menu.css
+++ b/styles/menu.css
@@ -14,9 +14,10 @@ body {
     cursor: pointer;
     z-index: 1000;
     color: #333;
-    padding: 5px;
+    padding: 10px;
     border-radius: 4px;
     transition: all 0.3s ease;
+    font-size: 30px;
 }
 #menu-togggle:hover {
     background: #e0e0e0;
@@ -54,6 +55,16 @@ body {
     }
     #docFrame.active {
         margin-left: 80%;
+    }
+    body {
+        font-size: 20px;
+    }
+
+    h1, h2 {
+        font-size: 2rem;
+    }
+    #Index {
+        font-size: 24px;
     }
 }
 
