--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,3 +127,27 @@ textarea::-webkit-scrollbar-thumb {
     background: #ccc;
     border-radius: 4px;
 }
+
+@media (max-width: 1000px) {
+    body {
+        font-size: 14px;
+    }
+    h1 {
+        font-size: 2.5rem;
+    }
+    h2 {
+        font-size: 2.0rem;
+    }
+    p, ul, li {
+        font-size: 1.1em;
+    }
+    #Index {
+        font-size: 20px;
+    }
+    textarea {
+        font-size: 16px;
+    }
+    table, table th, table td, table tr {
+        font-size: 1.1rem;
+    }
+}
